css/layout.css
/*TODO: DELETE CSS !!*/
body {
    /*background-color: orange;*/
}

/*END DELETE CSS*/
p {
    color: #999999;
}

.body {
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
}

.center-div {
    margin: 0 auto;
}

.center-text {
    text-align: center;
}

.container {
    margin: 0 auto;
}

.theme-container {
    width: 100%;
}

.theme-attribute {
    float: left;
    height: 4px;
    width: 10%;
    max-width: 60px;

    background-color: #f38181;
    margin-right: 4px;
    margin-top: 10px;
}

.theme-attribute-name {
    margin: 10px 0;
    font-size: 20px;

    font-family: 'Kaushan Script', cursive;
}

.theme-bottom-border {
    margin-top: 60px;
    width: 60px;
    background-color: #f38181;
    height: 3px;
    /*border: 3px solid #f38181;*/
}

/* HEADER CSS */
.header-container {
    overflow: hidden;
}

.header {
    background-image: linear-gradient(to bottom, rgba(244, 140, 130, 0.5), rgba(239, 215, 137, 0.73)), url("../image/logo/header_background.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;

    height: 95vh;
    padding: 28px 12px 17px 12px;
}

.header-logo {
    float: left;

    padding-bottom: 8px;
}

.header-menu {
    color: white;
    width: 20px;
    height: 20px;

    float: right;
}

.header-menu:hover + .header-link {
    position: absolute;
    right: 35px;
    top: 30px;
    background-color: black;

    display: block;
    padding: 10px 10px;
    text-align: right;
}

.header-link {
    display: none;
    float: right;
    list-style: none;
}

.header-link a {

    font-size: 13px;
    font-weight: lighter;
}


.header-link li {
    padding: 3px 0;
}

.header-link li a {
    text-decoration: none;
    color: white;

    padding-bottom: 8px;
}

.header-link li a:hover {
    color: #fce38a;

    border-bottom: 3px solid #fce38a;
}


.header-body-container {
    color: white;
    width: 100%;
    position: absolute;

    left: 50%;
    top: 15vh;
    transform: translateX(-50%);

    text-align: center;
}

.header-title {
    font-family: 'Kaushan Script', cursive;
    font-size: 30px;
}

.header-body {
    font-family: 'Montserrat', sans-serif;

    font-size: 50px;
}

.learn-more-btn-container {
    color: white;
    width: 100%;
    position: absolute;

    left: 50%;
    top: 60vh;
    transform: translateX(-50%);

    text-align: center;
}

.header-body-border {
    width: 60px;
    margin: 0 auto 73px;
    border-bottom: 3px solid white;
}

.learn-more-btn {
    font-size: 15px;
    font-weight: bold;
    color: white;
    padding: 16px 2.495840%;
    border: 4px solid white;

    margin-top: 50px;
    background-color: transparent;
    outline: none;
    cursor: pointer;
}

.learn-more-btn:hover {
    background-color: #fce38a;
}

.progress-container {
    color: white;
    position: absolute;
    width: 90%;

    left: 50%;
    top: 87vh;
    transform: translateX(-50%);
}

.progress {
    text-align: center;
    float: left;

    width: 23%;
    margin: 1% 1%;
}

.progress-bar-container {
    width: 100%;
    background-color: white;
}

.progress-bar {
    width: 0;
    height: 3px;
    margin-bottom: 10px;
    background-color: #f38181;
}

.current-placing-count {
    font-weight: bold;
    font-size: 20px;
    display: none;
}

.current-placing {
    font-size: 12px;
    font-weight: lighter;
}

/* END HEADER CSS */

/* START BODY CSS */
.body {

}

.section {
    padding: 90px 0 110px 0;
    margin: 0 10px;

    overflow: hidden;
}

.section-title-container {
    margin-bottom: 45px;
}

.section-title {
    text-align: center;
    margin-bottom: 40px;
}

.section-title h3 {
    font-family: 'Kaushan Script', cursive;
}

.about-us-paragraph {
    font-family: 'Roboto', sans-serif;
    font-weight: lighter;
    font-size: 13px;

    margin-bottom: 104px;
}

.about-us-img-container {
    width: 100%;
    height: 100%;
    /*overflow: hidden;*/
}

.img-wrapper {
    float: left;
    /*padding: 30px 0;*/

    margin: 15px 0;
    height: 251px;
    width: 100%;
}


.meet-team-image-wrapper {
    margin: 40px auto;
}


.first-about-img {
    background-image: url("../image/body_images/computer_desk.png");
}

.second-about-img {
    background-image: url("../image/body_images/populated_desk.png");
}

.third-about-img {
    background-image: url("../image/body_images/non_populated_desk.png");
}

.about-us-img {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    height: 100%;
}


.about-us-img-info {
    color: white;
    position: relative;
    bottom: 140px;
    right: 30px;
    font-weight: bold;
    display: none;
}

.about-us-img:hover {
    position: relative;
    bottom: 10px;
    box-shadow: 10px 10px #95e1d3;
}

.first-about-img:hover {
    background-image: linear-gradient(to bottom, rgba(244, 140, 130, 0.5), rgba(239, 215, 137, 0.73)), url("../image/body_images/computer_desk.png");
}

.second-about-img:hover {
    background-image: linear-gradient(to bottom, rgba(244, 140, 130, 0.5), rgba(239, 215, 137, 0.73)), url("../image/body_images/populated_desk.png");
}

.third-about-img:hover {
    background-image: linear-gradient(to bottom, rgba(244, 140, 130, 0.5), rgba(239, 215, 137, 0.73)), url("../image/body_images/non_populated_desk.png");
}

.about-us-img:hover + .about-us-img-info {
    display: block;
}

.img-wrapper:hover {
    cursor: pointer;
}

.section-achievements {
    width: 100%;
    background-color: #95e1d3;

    overflow: hidden;
}


.achievement {
    text-align: center;
    /*float: left;*/
    padding: 20px 20%;
    border: 1px solid rgba(255, 255, 255, 0.1);
    color: white;
}

.achievement-count {
    font-size: 50px;
}

.achievement-subject {
    font-size: 11px;
    font-family: 'Roboto', sans-serif;
    font-weight: lighter;
}

.services-body-container {
    overflow: hidden;
}
/* ... */

